# lambo

./: README.md  pyproject.toml
src/lambo/: __init__.py
src/lambo/data/: __init__.py  document.py  sentence.py  token.py  turn.py
src/lambo/evaluation/: __init__.py  conll18_ud_eval.py  evaluate.py
src/lambo/examples/: __init__.py  run_evaluation.py  run_pretraining.py  run_training.py  run_training_pretrained.py  run_training_splitting.py  run_tuning.py  run_usage.py  run_usage_COMBO.py
src/lambo/learning/: __init__.py  dictionary.py  model.py  model_pretraining.py  preprocessing_dict.py  preprocessing_pretraining.py  train.py
src/lambo/resources/: __init__.py  languages.txt  pauses.txt  turn_regexp.txt
src/lambo/segmenter/: __init__.py  lambo.py  spacy.py
src/lambo/subwords/: __init__.py  model.py  preprocessing.py  splitter.py  train.py
src/lambo/utils/: __init__.py  download.py  generate_languages_txt.py  oscar.py  printer.py  special_tokens.py  ud_reader.py
