[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambo"
version = "2.3"
authors = [
  { name="Piotr Przybyła", email="piotr.przybyla@ipipan.waw.pl" },
]
description = "A multi-lingual text segmentation tool/"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'torch >= 2.0, < 3.0',
  'requests >= 2.28, < 3.0',
  'tqdm >= 4.31, < 5.0',
  'urllib3 >= 1.26.18, <2.0',
  'numpy >= 1.23, < 2.0',
]

[project.optional-dependencies]
spacy = [ 'spacy >= 3.5.3, < 4.0', ]


[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
